--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="math">Mathematics</string>
     <string name="book">Books</string>
     <string name="nature">Nature</string>
-    <string name="emailunderline"><u>edilov2222@gmail.com</u></string>
+    <string name="emailunderline"><u>infoquizapp2021@gmail.com</u></string>
     <string name="computer">Computers</string>
     <string name="politics">Politics</string>
     <string name="music">Musics</string>
